--- a/styles/sass/partials/home/_search.scss
+++ b/styles/sass/partials/home/_search.scss
@@ -1,7 +1,7 @@
 @use '../global/variables' as v;
 
 .banner-img {
-    background: url(../sanctuary-helpers-final-images/banner-image.jpg) center / cover;
+    background: url(../assets/banner-image.jpg) center / cover;
     min-height: 60vh;
 }
 
